export enum AccountRole {
  ADMIN = 'admin',
  MEMBER = 'member',
  GUEST = 'guest',
}
