export enum ProjectRole {
  TEAM_LEAD = 'team_lead',
  DEVELOPER = 'developer',
  OBSERVER = 'observer',
}
