export enum TeamRole {
  OWNER = 'owner',
  MEMBER = 'member',
  OBSERVER = 'observer',
}
