export interface Team {
  id: number;
  name: string;
  description: string;
  createdAt: string;
  createdById: number;
}
