@startuml
' ============================================================
' Диаграмма 4а. Доменные сущности и связи
' ============================================================

title Диаграмма классов 4а\nДоменная модель: актуальные сущности и связи

skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #4A5568
  ArrowColor #4A5568
}

package "Пользователи и команды" #E8F5E9 {

  class User <<entity>> {
    +id: number
    +login: string
    +password: string
    +fullName: string
    +profession: string
    +accountStatus: 'active' | 'blocked'
    +accountRole: AccountRole
    +createdAt: string
    +updatedAt: string
  }

  class Team <<entity>> {
    +id: number
    +name: string
    +description: string
    +createdAt: string
    +createdById: number
  }

  class TeamMember <<entity>> {
    +id: number
    +userId: number
    +teamId: number
    +teamRole: TeamRole
  }
}

package "Проекты и задачи" #E3F2FD {

  class Project <<entity>> {
    +id: number
    +teamId: number
    +name: string
    +description: string
    +status: ProjectStatus
    +createdAt: string
    +updatedAt: string
  }

  class ProjectMember <<entity>> {
    +id: number
    +projectId: number
    +userId: number
    +role: ProjectRole
    +assignedAt: string
  }

  class Task <<entity>> {
    +id: number
    +projectId: number
    +name: string
    +description: string
    +deadline: string
    +status: TaskStatus
    +difficulty: number
    +assigneeId: number?
    +createdById: number
    +createdAt: string
    +updatedAt: string
  }
}

package "Аудит" #FFF8E1 {

  class AuditLog <<entity>> {
    +id: number
    +userId: number
    +action: AuditAction
    +entityType: string
    +entityId: number?
    +oldValue: string?
    +newValue: string?
    +timestamp: string
    +description: string
  }
}

package "Enums" #F3F4F6 {

  enum AccountRole {
    admin
    member
    guest
  }

  enum TeamRole {
    owner
    member
    observer
  }

  enum ProjectRole {
    team_lead
    developer
    observer
  }

  enum ProjectStatus {
    active
    on_hold
    completed
    archived
  }

  enum TaskStatus {
    new
    in_progress
    review
    done
    cancelled
  }

  enum AuditAction {
    create
    update
    delete
    login
    assign
    status_change
  }
}

User "1" -- "0..*" Team : createdById
User "1" -- "0..*" TeamMember : userId
Team "1" -- "0..*" TeamMember : teamId
Team "1" -- "0..*" Project : teamId

User "1" -- "0..*" ProjectMember : userId
Project "1" -- "0..*" ProjectMember : projectId
Project "1" -- "0..*" Task : projectId

User "1" -- "0..*" Task : createdById
User "0..1" <-- "0..*" Task : assigneeId
User "1" -- "0..*" AuditLog : userId

User ..> AccountRole
TeamMember ..> TeamRole
ProjectMember ..> ProjectRole
Project ..> ProjectStatus
Task ..> TaskStatus
AuditLog ..> AuditAction

note right of AuditLog
  История смены статуса задачи
  хранится здесь через:
  action = status_change
  oldValue / newValue
end note

@enduml
